--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Cabin:wght@500&family=Raleway&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    border: none;
+}
+
+body {
+    font-family: Cabin, sans-serif;
+    font-weight: 500;
+    color: #083248;
+}
+
+/* headings and logo */
+
+h1, h2 {
+    font-family: Cabin, sans-serif;
+    text-transform: capitalize;
+    letter-spacing: 1px;
+    color: #083248;
+}
+
+#logo {
+    float: left;
+    font-size: 280%;
+}
