--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,14 @@ h1, h2 {
     font-size: 280%;
 }
 
+/* navigation links */
+
+#menu {
+    font-size: 110%;
+    letter-spacing: 4px;
+    float: right;
+}
+
 /* main-image */
 
 #main-image {
