--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ h1, h2 {
     font-family: Cabin, sans-serif;
     text-transform: capitalize;
     letter-spacing: 1px;
-    color: #083248;
+    color: #8c0e0f;
 }
 
 #logo {
@@ -32,6 +32,22 @@ h1, h2 {
     font-size: 110%;
     letter-spacing: 4px;
     float: right;
+}
+
+#menu li {
+    
+    list-style-type: none;
+    margin-right: 30px;
+    display: inline;
+}
+
+#menu, #logo {
+    line-height: 75px;
+}
+
+#menu a {
+    text-decoration: none;
+    color: #8c0e0f;
 }
 
 /* main-image */
