--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,7 @@ h1, h2 {
 
 /* main-image */
 
-#main-image {
+#hero-image-home {
     height: 600px;
     width: 100%;
     background: url('../images/skyscrapers-1081737_1920.jpg') no-repeat center center;
