--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,3 +153,34 @@ h1, h2 {
     background-color: #8C0E0F;
     height: 375px;
 }
+
+/* testimonials boxes on index.html */
+
+#testimonials {
+    width: 100%;
+    margin-top: 30px;
+    display: flex;
+    color: #DBA858;
+}
+
+#left-box {
+    width: 33.33%;
+    float: left;
+    background-color: #0B2838;
+    height: 375px;
+}
+
+#right-box {
+    width: 33.33%;
+    float: right;
+    background-color: #0B2838;
+    height: 375px;
+}
+
+#centre-box-1 {
+    width: 33.33%;
+    margin: 0 auto;
+    background-color: #DBA858;
+    height: 375px;
+    color: #0B2838; 
+}
