--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,6 +130,9 @@ h1, h2 {
     width: 100%;
     margin-top: 30px;
     display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
     color: #DBA858;
 }
 
@@ -138,6 +141,13 @@ h1, h2 {
     float: left;
     background-color: #0B2838;
     height: 375px;
+    text-align: center;
+    margin: 0 auto;
+}
+
+#left-box > h3 {
+    font-size: 25px;
+    font-weight: 600;
 }
 
 #right-box {
@@ -145,6 +155,13 @@ h1, h2 {
     float: right;
     background-color: #0B2838;
     height: 375px;
+    text-align: center;
+    margin: 0 auto;
+}
+
+#right-box > h3 {
+    font-size: 25px;
+    font-weight: 600;
 }
 
 #centre-box {
@@ -152,12 +169,20 @@ h1, h2 {
     margin: 0 auto;
     background-color: #8C0E0F;
     height: 375px;
+    text-align: center;
+}
+
+#centre-box > h3 {
+    font-size: 25px;
+    font-weight: 600;
 }
 
 /* past-projects gallery on index.html */
 
 #past-projects {
-    width: 100%
+    width: 100%;
+    margin-top: 75px;
+    height: 375px;
 }
 
 /* testimonials boxes on index.html */
