--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,32 +230,57 @@ i.fas {
     width: 100%;
     margin-top: 37.5px;
     margin-bottom: 37.5px;
-    height: 375px;
     text-align: center;
     font-size: 160%;
     font-family: "Raleway", sans-serif;
 }
 
-#image-box-left {
-    width: 50%;
-    float: left;
-    height: 375px;
-    display: flex;
-    justify-content: center;
-}
-
-#image-box-right {
-    width: 50%;
-    float: right;
-    height: 375px;
-    display: flex;
-    justify-content: center;
-}
-.project-image {
+div.gallery {
+    border: 1px solid #9F886B;
+  }
+  
+  div.gallery:hover {
+    border: 1px solid #0B2838;
+  }
+  
+  div.gallery img {
     width: 100%;
     height: auto;
+  }
+  
+  div.desc {
     padding: 15px;
-}
+    text-align: center;
+  }
+  
+  * {
+    box-sizing: border-box;
+  }
+  
+  .responsive {
+    padding: 0 6px;
+    float: left;
+    width: 24.99999%;
+  }
+  
+  @media only screen and (max-width: 700px) {
+    .responsive {
+      width: 49.99999%;
+      margin: 6px 0;
+    }
+  }
+  
+  @media only screen and (max-width: 500px) {
+    .responsive {
+      width: 100%;
+    }
+  }
+  
+  .clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
     
 
 /* testimonials boxes on index.html */
