--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,19 +81,30 @@ h1, h2 {
 
 /* text over image */
 
+#cover-headlines-outer {
+    width: 620px;
+    height: 210px;
+    background-color: rgba(221, 226, 198, 0.5);
+    border-radius: 5%;
+    position: absolute;
+    top: 25%;
+    left: 25%;
+}
+
 #cover-headlines {
 
     font-size: 130%;
     font-family: "Cabin", sans-serif;
     text-transform: capitalize;
     letter-spacing: 4px;
-
     width: 600px;
     height: 200px;
-
     position: absolute;
-    top: 33.33%;
-    left: 33.33%;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-content: center;
+    flex-direction: column;
 }
 
 #cover-headlines-subtitle {
@@ -171,7 +182,7 @@ i.fas {
 }
 
 #left-box > h3 {
-    font-size: 175%;
+    font-size: 140%;
     font-weight: 600;
     line-height: 75px;
 }
@@ -192,7 +203,7 @@ i.fas {
 }
 
 #right-box > h3 {
-    font-size: 175%;
+    font-size: 140%;
     font-weight: 600;
     line-height: 75px;
 }
@@ -207,12 +218,12 @@ i.fas {
 
 #centre-box {
     width: 33.33%;
-    background-color: #8C0E0F;
+    background-color: #2F5596;
     height: 375px;
 }
 
 #centre-box > h3 {
-    font-size: 175%;
+    font-size: 140%;
     font-weight: 600;
     line-height: 75px;
 }
