--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,11 @@ body, html {
     height: 100%;
 }
 
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
 /* headings and logo */
 
 h1, h2 {
@@ -56,7 +61,7 @@ h1, h2 {
 }
 
 .active {
-    border-bottom: 1px solid #0b2838;
+    border-bottom: 1px solid #8c0e0f;
 }
 
 /* hero-image-home */
@@ -221,9 +226,9 @@ i.fas {
     line-height: normal;
     vertical-align: middle;
 }
-/* past-projects gallery on index.html */
+/* section-title on index.html */
 
-#past-projects {
+#section-title {
     width: 100%;
     margin-top: 37.5px;
     margin-bottom: 37.5px;
@@ -231,6 +236,8 @@ i.fas {
     font-size: 180%;
     font-family: "Raleway", sans-serif;
 }
+
+/* past-projects gallery on index.html */
 
 div.gallery {
     border: 1px solid #9F886B;
@@ -294,14 +301,6 @@ div.gallery {
     color: #fff;
 }
 
-#centre-box-1 {
-    width: 33.33%;
-    margin: 0 auto;
-    background-color: #8c0e0f;
-    height: 375px;
-    color: #fff;
-}
-
 /* footer info boxes */
 
 .footer {
@@ -326,12 +325,13 @@ div.gallery {
 .title-left {
     color: #2F5596;
     text-decoration: none;
-    font-family: "Raleway", Sans-serif;
-    font-size: 110%;
+    font-family: "Cabin", Sans-serif;
+    font-size: 85%;
     letter-spacing: 4px;
-    font-weight: bold;
+    font-weight: 500;
     line-height: 30px;
     margin: 20px 0px 5px 0px;
+    border-bottom: 1px solid #8c0e0f
 }
 
 #infobox-content-2 {
@@ -347,12 +347,13 @@ div.gallery {
 .title-right {
     color: #2F5596;
     text-decoration: none;
-    font-family: "Raleway", Sans-serif;
-    font-size: 110%;
+    font-family: "Cabin", Sans-serif;
+    font-size: 85%;
     letter-spacing: 4px;
-    font-weight: bold;
+    font-weight: 500;
     line-height: 30px;
     margin: 20px 0px 5px 0px;
+    border-bottom: 1px solid #8c0e0f
 }
 
 #social-media-icons {
@@ -366,9 +367,13 @@ div.gallery {
     width: 50%;
 }
 
+.fab:hover {
+    color: #0b2838;
+}
+
 #contact-info {
     color: #2F5596;
-    font-family: "Cabin", sans-serif;
+    font-family: "Raleway", sans-serif;
     font-size: 110%;
     display: flex;
     float: left;
