add aria-labels to social media links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,6 +235,7 @@ i.fas {
     text-align: center;
     font-size: 180%;
     font-family: "Raleway", sans-serif;
+    color:  #8c0e0f;
 }
 
 /* past-projects gallery on index.html */
