--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,6 +256,8 @@ div.gallery {
     padding: 15px;
     text-align: center;
     font-size: 18px;
+    font-family: "Raleway", sans-serif;
+    color: #2F5596;
   }
   
   * {
