--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -656,3 +656,63 @@ div.gallery {
   
 
 /* contact.html */
+
+#contact-us-page {
+    background-color: #0b2838;
+    height: 600px;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+}
+
+#form-title {
+    width: 33.33%;
+    height: 100%;
+    padding: 50px;
+    display: block;
+    float: left;  
+}
+
+#form-title > h2 {
+    color: white;
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 58px; 
+}
+
+#form-title > h4 {
+    color: #9F886B;
+    font: "Raleway", sans-serif;
+    font-size: 24px;
+}
+
+#form {
+    color: white;
+    display: block;
+    width: 60%;
+    float: right;
+    margin: 20px auto;
+}
+
+.left {
+    display: block;
+    width: 50%;
+    float: left;
+}
+
+.right {
+    display: block;
+    width: 50%;
+    float: right;
+}
+
+input, label {
+    color: white;
+    border:0; outline:0;
+    padding: 1em;
+    display: block;
+    width: 100%;
+    height: 100%;
+    margin-top: 1em;
+    font-family: "Raleway", sans-serif;
+}
