--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -657,16 +657,44 @@ div.gallery {
 
 /* contact.html */
 
-#contact-us-page {
-    background-color: #0b2838;
-    height: 600px;
-    width: 100%;
-    overflow: hidden;
-    position: relative;
+ /* Split the screen in half */
+
+ .form-container {
+    border: 3px solid #fff;
+    padding: 20px;
 }
 
+.split {
+    width: 50%;
+    float: left;
+    padding: 20px;
+    border: 2px solid red;
+}  
+
+ .split {
+    height: 100%;
+    width: 50%;
+    position: relative;
+    z-index: 1;
+    top: 0;
+    overflow-x: hidden;
+    padding-top: 20px;
+  }
+  
+  /* Control the left side */
+  .left-side {
+    left: 0;
+    background-color: #0b2838;
+  }
+  
+  /* Control the right side */
+  .right-side {
+    right: 0;
+    background-color: #0b2838;
+  }
+
 #form-title {
-    width: 33.33%;
+    width: 40%;
     height: 100%;
     padding: 50px;
     display: block;
@@ -686,33 +714,69 @@ div.gallery {
     font-size: 24px;
 }
 
-#form {
-    color: white;
-    display: block;
-    width: 60%;
-    float: right;
-    margin: 20px auto;
-}
-
-.left {
-    display: block;
-    width: 50%;
-    float: left;
-}
-
-.right {
-    display: block;
-    width: 50%;
-    float: right;
-}
-
-input, label {
-    color: white;
-    border:0; outline:0;
-    padding: 1em;
-    display: block;
+* {
+    box-sizing: border-box;
+  }
+  
+  input[type=text], select, textarea {
     width: 100%;
-    height: 100%;
-    margin-top: 1em;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+  }
+  
+  label {
+    padding: 12px 12px 12px 0;
+    display: inline-block;
     font-family: "Raleway", sans-serif;
-}
+    color: #9F886B;
+    font-size: 20px;
+  }
+  
+  input[type=submit] {
+    background-color: #8c0e0f;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    float: right;
+  }
+  
+  input[type=submit]:hover {
+    background-color: #550808;
+  }
+  
+  .container {
+    border-radius: 5px;
+    background-color: #0b2838;
+    padding: 50px;
+  }
+  
+  .col-25 {
+    float: left;
+    width: 25%;
+    margin-top: 6px;
+  }
+  
+  .col-75 {
+    float: left;
+    width: 75%;
+    margin-top: 6px;
+  }
+  
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 600px) {
+    .col-25, .col-75, input[type=submit] {
+      width: 100%;
+      margin-top: 0;
+    }
+  }
