--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -722,6 +722,7 @@ div.gallery {
     border-radius: 4px;
     resize: vertical;
     font-family: 'Cabin', sans-serif;
+    font-size: 16px;
   }
   
   label {
