--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@ h1, h2 {
 
 /* hero-image-home */
 
-#hero-image-outer {
+.hero-image-outer {
     height: 600px;
     width: 100%;
     overflow: hidden;
@@ -93,7 +93,7 @@ h1, h2 {
 
 /* text over image */
 
-#cover-headlines-outer {
+.cover-headlines-outer {
     width: 620px;
     height: 210px;
     border: 3px solid #8c0e0f;
@@ -105,7 +105,7 @@ h1, h2 {
     align-items: center;
 }
 
-#cover-headlines {
+.cover-headlines {
 
     font-size: 160%;
     font-family: "Cabin", sans-serif;
@@ -117,7 +117,6 @@ h1, h2 {
     position: absolute;
     justify-content: center;
     text-align: center;
-    align-content: center;
     flex-direction: column;
 }
 
@@ -477,13 +476,6 @@ div.gallery {
 
 /* planning.html */
 
-#plan-hero-image-outer {
-    height: 600px;
-    width: 100%;
-    overflow: hidden;
-    position: relative;
-}
-
 #plan-hero-image-home {
     height: 100%;
     width: 100%;
@@ -495,31 +487,9 @@ div.gallery {
     background-size: cover;
 }
 
-#plan-cover-headlines-outer {
-    width: 620px;
-    height: 210px;
-    border: 3px solid #8c0e0f;
-    background-color: rgba(221, 226, 198, 0.5);
-    border-radius: 25px;
-    position: absolute;
-    top: 25%;
-    left: 25%;
-}
-
-#plan-cover-headlines {
-    font-size: 140%;
-    width: 600px;
-    height: 200px;
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    align-content: center;
-    flex-direction: column;
-}
-
-#plan-cover-headlines > h2 {
+.headlines-h2 {
     text-transform: none;
+    font-size: 120%;
 }
 
 #plan-text-container {
@@ -574,13 +544,6 @@ div.gallery {
 
 /* tactics.html */
 
-#tactics-hero-image-outer {
-    height: 600px;
-    width: 100%;
-    overflow: hidden;
-    position: relative;
-}
-
 #tactics-hero-image-home {
     height: 100%;
     width: 100%;
@@ -590,33 +553,6 @@ div.gallery {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-}
-
-#tactics-cover-headlines-outer {
-    width: 620px;
-    height: 210px;
-    border: 3px solid #8c0e0f;
-    background-color: rgba(221, 226, 198, 0.5);
-    border-radius: 25px;
-    position: absolute;
-    top: 25%;
-    left: 25%;
-}
-
-#tactics-cover-headlines {
-    font-size: 140%;
-    width: 600px;
-    height: 200px;
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    align-content: center;
-    flex-direction: column;
-}
-
-#tactics-cover-headlines > h2 {
-    text-transform: none;
 }
 
 .tactics-table-container {
