--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,7 +98,7 @@ h1, h2 {
     width: 620px;
     height: 210px;
     border: 3px solid #8c0e0f;
-    background-color: rgba(221, 226, 198, 0.5);
+    background-color: #e6eed6;
     border-radius: 25px;
     display: flex;
     position: absolute;
