--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ a {
 }
 
 hr {
-border-top: 3px solid #2F5596;
+    border-top: 3px solid #2F5596;
 }
 
 /* headings and logo */
@@ -123,24 +123,24 @@ h1, h2 {
 
 /* main paragraphs on index.html */
 
-#text-container {
+.text-container {
     margin: 0 auto;
     width: 66.66%;
     padding-top: 50px;
     padding-bottom: 25px;
 }
 
-#text-container > h2 {
+.text-container > h2 {
     margin-top: 20px;
     margin-bottom: 20px;
     text-transform: none;
     text-align: center;
     color: #0b2838;
     font-weight: 600;
-    line-height: 1.4em;
+    line-height: 2em;
 }
 
-#text-container > p {
+.text-container > p {
     margin-top: 20px;
     margin-bottom: 20px;
     text-transform: none;
@@ -149,20 +149,33 @@ h1, h2 {
     font-family: "Raleway", sans-serif;
     font-weight: 300;
     font-size: 17px;
-    line-height: 1.2em;
+    line-height: 1.4em;
+}
+
+/* section-title on index.html */
+
+.section-title > h2 {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-transform: capitalize;
+    text-align: center;
+    color: #8c0e0f;
+    line-height: 1.4em;
+    font-size: 200%;
+    font-weight: 700;
 }
 
 /* about-us boxes on index.html */
 
 #about-us {
-    width: 100%;
+    width: 80%;
     height: 375px;
     margin: 0 auto;
     display: flex;
     flex-direction: row;
     justify-content: center;
     text-align: center;
-    color: #fff;
+    color: white;
 }
 
 #centre-text {
@@ -180,17 +193,18 @@ i.fas {
     float: left;
     background-color: #0b2838;
     height: 375px;
+    margin: 5px;
 }
 
 #left-box > h3 {
-    font-size: 120%;
+    font-size: 160%;
     font-weight: 600;
     line-height: 75px;
 }
 
 #left-box > p {
     margin: 20px;
-    font-size: 16px;
+    font-size: 18px;
     display: inline-block;
     line-height: normal;
     vertical-align: middle;
@@ -201,17 +215,18 @@ i.fas {
     float: right;
     background-color: #0b2838;
     height: 375px;
+    margin: 5px;
 }
 
 #right-box > h3 {
-    font-size: 120%;
+    font-size: 160%;
     font-weight: 600;
     line-height: 75px;
 }
 
 #right-box > p {
     margin: 20px;
-    font-size: 16px;
+    font-size: 18px;
     display: inline-block;
     line-height: normal;
     vertical-align: middle;
@@ -221,32 +236,21 @@ i.fas {
     width: 33.33%;
     background-color: #2F5596;
     height: 375px;
+    margin: 5px;
 }
 
 #centre-box > h3 {
-    font-size: 120%;
+    font-size: 160%;
     font-weight: 600;
     line-height: 75px;
 }
 
 #centre-box > p {
     margin: 20px;
-    font-size: 16px;
+    font-size: 18px;
     display: inline-block;
     line-height: normal;
     vertical-align: middle;
-}
-/* section-title on index.html */
-
-.section-title > h2 {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    text-transform: capitalize;
-    text-align: center;
-    color: #8c0e0f;
-    line-height: 1.4em;
-    font-size: 180%;
-    font-weight: 700;
 }
 
 /* past-projects gallery on index.html */
