--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -308,50 +308,73 @@ div.desc {
 /* testimonials boxes on index.html */
 
 #testimonials {
-    width: 100%;
+    width: 80%;
     height: 450px;
     margin: 0 auto;
     display: flex;
     flex-direction: row;
     justify-content: center;
     text-align: center;
-    color: #fff;
+    color: white;
 }
 
-#testimonials > #left-box > h3 {
+#left-box-testimonial {
+    width: 33.33%;
+    float: left;
+    background-color: #0b2838;
+    height: 375px;
+    margin: 5px;
+}
+
+#left-box-testimonial > h3 {
     font-size: 80%;
     font-weight: 600;
     line-height: 55px;
 }
 
-#testimonials > #left-box > h4 {
+#left-box-testimonial > h4 {
     font-size: 80%;
     font-weight: 400;
 }
 
-#testimonials > #centre-box > h3 {
+#centre-box-testimonial {
+    width: 33.33%;
+    background-color: #2F5596;
+    height: 375px;
+    margin: 5px;
+}
+
+#centre-box-testimonial > h3 {
     font-size: 80%;
     font-weight: 600;
     line-height: 55px;
 }
 
-#testimonials > #centre-box > h4 {
+#centre-box-testimonial > h4 {
     font-size: 80%;
     font-weight: 400;
 }
 
-#testimonials > #right-box > h3 {
+#right-box-testimonial {
+    width: 33.33%;
+    float: right;
+    background-color: #0b2838;
+    height: 375px;
+    margin: 5px;
+}
+
+#right-box-testimonial > h3 {
     font-size: 80%;
     font-weight: 600;
     line-height: 55px;
 }
 
-#testimonials > #right-box > h4 {
+#right-box-testimonial > h4 {
     font-size: 80%;
     font-weight: 400;
 }
 
-#circle-container {
+.circle-container {
     width: 150px;
     height: 150px;
     padding: 11.5px;
